28 January 2008
+ getFile has second parameter to forgo style from file cabinet
+ Increase document upload size.
+ Fixed file assoc's image resize code.
+ Fixed button vs link in file cabinet's admin screens
+ Lightened border on image thumbs

25 January 2008
+ Restructured file_assoc - no longer uses tag variable
 ( Resize is broken now, will fix next commit. )
+ Removed one set of thumbnail dimension defines
+ Added file checks to file types. FC will not let you save a
  new, duplicate file in the same directory.
+ Document folder option added.
+ A blank tag from a file_assoc will delete that file_assoc.
+ Documents sorted by title not file name.
+ Removed no_kids variable. Not used now that resizes aren't saved to
  database.
+ Fixed typo in image that created thumbnails.
+ mp3 and flash videos now use the media filter only.
+ Fixed some problems with the media upload form.
+ Added missing fid variable from pick_file script
+ Dumping icons

23 January 2008
+ Random image and slideshow options added to file manager's image
  screen
+ Removed imageTags function from folder
+ Current images and folder options are highlighted now.
+ All image resizes are performed when an image is updated.


22 January 2008
+ Added resize directory creation.
+ Turning cacheOff on javascript popups. Allows thumbnail refresh.
+ Renamed menu function to openFileManager to match operation name.
+ If an image is deleted, its resize directory is as well. Also
  removed old parent/child deletion logic.
+ Added a degrees parameter to Image's rotate function.
+ module and itemname variables and functions removed from image
  manager.
+ Old method of choosing images removed from Image Manager.
+ Starting (but not completed) resize images function for updates.


19 January 2008
+ Added logged error message if a folder can not be created.
+ Checking for multimedia directory creation again on update. Could be
slipping by on some updates.

17 January 2008
+ Rewrite of File Cabinet in progress.