@@ -1,3 +1,5 @@
+<object width="{WIDTH}" height="{HEIGHT}">
+<param name="media{ID}" value="templates/filecabinet/filters/media/mediaplayer.swf" />
 <embed 
 src="templates/filecabinet/filters/media/mediaplayer.swf" 
 width="{WIDTH}" 
@@ -7,3 +9,4 @@ allowfullscreen="true"
 <!-- BEGIN display-width -->displayheight="{DISPLAYHEIGHT}"<!-- END display-width -->
 flashvars="width={WIDTH}&height={HEIGHT}&file={FILE_PATH}<!-- BEGIN thumbnail -->&image={THUMBNAIL}<!-- END thumbnail -->"
 />
+</object>
