@@ -1,0 +1,8 @@
+<script type="text/javascript" src="templates/filecabinet/filters/media/swfobject.js"></script>
+
+<div id="{ID}"><a href="http://www.macromedia.com/go/getflashplayer">Get the Flash Player</a> to see this player.</div>
+
+<script type="text/javascript">
+var so = new SWFObject('{FILE_PATH}','shockwave','{WIDTH}','{HEIGHT}','8');
+so.write('{ID}');
+</script>
