@@ -1,0 +1,8 @@
+<object width="{WIDTH}" height="{HEIGHT}">
+<param name="shockwave{ID}" value="{FILE_PATH}" />
+<embed 
+src="{FILE_PATH}" 
+width="{WIDTH}" 
+height="{HEIGHT}"
+/>
+</object>
